# Cflow-Automation

./: conftest.py  main.py  output.json  pyproject.toml  pytest.ini  pytest_html_report.html  requirements.txt
Configurations/: config.ini
Locators/: Common_Locators.py  Locators_Admin_Add_User.py  Locators_Common.py
PageObjects/: A_loginpage.py  B_Admin_Add_user.py  C.py  Dummy file.py
Reports/: add_user_positive_cases.html  add_user_testcases.html  add_user_testcasesCI-CD.html  add_user_testcases_new.html  adduser.html
TestCases/: test_A_login.py  test_Sample_file.py
TestData/: User_Import.xlsx
Utilities/: BaseHelpers.py  ReadProperties.py
archive/: output_1762498133.7164187.json  output_1762498669.0220995.json  output_1762498909.775758.json  output_1762758228.728385.json  output_1762758327.0774615.json  output_1762759586.0926914.json  output_1762760893.6953554.json  output_1762760984.3645282.json  output_1762761093.4271123.json  output_1762761132.2729237.json  output_1762761348.127871.json  output_1762761526.0912666.json  output_1762764561.3777444.json  output_1762764653.7333934.json  output_1762764925.81493.json  output_1762765056.9020276.json  output_1762765224.8328032.json  output_1762765476.408109.json  output_1762765865.321867.json  output_1762765977.4045627.json  output_1762766016.7323592.json  output_1762766053.5731828.json  output_1762767175.9786823.json  output_1762767317.751614.json  output_1762767460.4946077.json  output_1762767551.9530816.json  output_1762767665.298934.json  output_1762767703.6979394.json  output_1762768889.4507043.json  (+96 more)
(+8 files in other folders)
