[project]
name = "cflow-playwright"
version = "0.1.0"
description = "CFLOW-Playwright Automation Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.56.0",
    "pytest>=9.0.1",
    "pytest-html>=4.1.1",
    "pytest-playwright>=0.7.2",
    "pytest-xdist>=3.8.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2"
]
